fix: fixed issue where hero name on header was too large on small screens. Changed to initials on small screens.

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -29,6 +29,19 @@
       font-size: 18px;;
       font-weight: 600;
     }
+
+    .nameSmall {
+      @include xs {
+        display: none;
+      }
+    }
+
+    .nameLarge {
+      display: none;
+      @include xs {
+        display: block;
+      }
+    }
   
     nav {
       display: flex;
