--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -2,6 +2,12 @@
 
 // breakpoints
 
+@mixin xs {
+    @media (min-width: #{$screen-xs}) {
+        @content;
+    }
+}
+
 @mixin sm {
     @media (min-width: #{$screen-sm}) {
         @content;
