--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -5,6 +5,8 @@ $dark-grey: #86868b;
 $blue: #006ddb;
 
 // breakpoints
+
+$screen-xs: 480px;
 $screen-sm: 640px;
 $screen-md: 768px;
 $screen-lg: 1024px;
